{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 19,
  "lineage": "f53b857d-2ebf-250f-cfab-44c9d57296f8",
  "resources": [
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d48f08a27cc17136",
            "domain": "vpc",
            "id": "eipalloc-0d48f08a27cc17136",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-48-114-247.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.114.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:internet-gateway/igw-00002466071741b5c",
            "id": "igw-00002466071741b5c",
            "owner_id": "343568180534",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "gw-Gal"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "gw-Gal"
            },
            "vpc_id": "vpc-08d5a8cb9ff35062c"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d48f08a27cc17136",
            "association_id": "eipassoc-03e4117791b76dcef",
            "connectivity_type": "public",
            "id": "nat-057405f587c1036a3",
            "network_interface_id": "eni-0d96f80b161d5f4c0",
            "private_ip": "10.0.101.78",
            "public_ip": "13.48.114.247",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f63120997a2fb31d",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "nat-Gal"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "nat-Gal"
            }
          },
          "dependencies": [
            "module.module-vpc.aws_eip.nat",
            "module.module-vpc.aws_internet_gateway.main-gw",
            "module.module-vpc.aws_subnet.main-public-1",
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:route-table/rtb-04245ca1df20a0097",
            "id": "rtb-04245ca1df20a0097",
            "owner_id": "343568180534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057405f587c1036a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "Gal-private-route-table"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "Gal-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d5a8cb9ff35062c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-vpc.aws_eip.nat",
            "module.module-vpc.aws_internet_gateway.main-gw",
            "module.module-vpc.aws_nat_gateway.nat-gw",
            "module.module-vpc.aws_subnet.main-public-1",
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:route-table/rtb-040a3bfa1bb4a3d7a",
            "id": "rtb-040a3bfa1bb4a3d7a",
            "owner_id": "343568180534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00002466071741b5c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "Gal-public-route-table"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "Gal-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d5a8cb9ff35062c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module-vpc.aws_internet_gateway.main-gw",
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0907ca2a43ae4bcaf",
            "route_table_id": "rtb-04245ca1df20a0097",
            "subnet_id": "subnet-0a24032549f03599c"
          },
          "dependencies": [
            "module.module-vpc.aws_eip.nat",
            "module.module-vpc.aws_internet_gateway.main-gw",
            "module.module-vpc.aws_nat_gateway.nat-gw",
            "module.module-vpc.aws_route_table.main-private",
            "module.module-vpc.aws_subnet.main-private-1",
            "module.module-vpc.aws_subnet.main-public-1",
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fdaba18d0f0e88f",
            "route_table_id": "rtb-04245ca1df20a0097",
            "subnet_id": "subnet-0abc09f7a562b6169"
          },
          "dependencies": [
            "module.module-vpc.aws_eip.nat",
            "module.module-vpc.aws_internet_gateway.main-gw",
            "module.module-vpc.aws_nat_gateway.nat-gw",
            "module.module-vpc.aws_route_table.main-private",
            "module.module-vpc.aws_subnet.main-private-2",
            "module.module-vpc.aws_subnet.main-public-1",
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aea2b148cc4b5ec9",
            "route_table_id": "rtb-04245ca1df20a0097",
            "subnet_id": "subnet-077193a88a57bb63d"
          },
          "dependencies": [
            "module.module-vpc.aws_eip.nat",
            "module.module-vpc.aws_internet_gateway.main-gw",
            "module.module-vpc.aws_nat_gateway.nat-gw",
            "module.module-vpc.aws_route_table.main-private",
            "module.module-vpc.aws_subnet.main-private-3",
            "module.module-vpc.aws_subnet.main-public-1",
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edd230174509a837",
            "route_table_id": "rtb-040a3bfa1bb4a3d7a",
            "subnet_id": "subnet-0f63120997a2fb31d"
          },
          "dependencies": [
            "module.module-vpc.aws_internet_gateway.main-gw",
            "module.module-vpc.aws_route_table.main-public",
            "module.module-vpc.aws_subnet.main-public-1",
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048b193d4f55f1949",
            "route_table_id": "rtb-040a3bfa1bb4a3d7a",
            "subnet_id": "subnet-0fa2fb85e3f4a3c69"
          },
          "dependencies": [
            "module.module-vpc.aws_internet_gateway.main-gw",
            "module.module-vpc.aws_route_table.main-public",
            "module.module-vpc.aws_subnet.main-public-2",
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069bb20b78074ff39",
            "route_table_id": "rtb-040a3bfa1bb4a3d7a",
            "subnet_id": "subnet-09c3c854c42084aec"
          },
          "dependencies": [
            "module.module-vpc.aws_internet_gateway.main-gw",
            "module.module-vpc.aws_route_table.main-public",
            "module.module-vpc.aws_subnet.main-public-3",
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-0a24032549f03599c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a24032549f03599c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "main-private-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-08d5a8cb9ff35062c"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-0abc09f7a562b6169",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abc09f7a562b6169",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "main-private-2"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-08d5a8cb9ff35062c"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-077193a88a57bb63d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077193a88a57bb63d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "main-private-3"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-08d5a8cb9ff35062c"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-0f63120997a2fb31d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f63120997a2fb31d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "main-public-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-08d5a8cb9ff35062c"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-0fa2fb85e3f4a3c69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa2fb85e3f4a3c69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "main-public-2"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-08d5a8cb9ff35062c"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:subnet/subnet-09c3c854c42084aec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c3c854c42084aec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343568180534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "main-public-3"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-08d5a8cb9ff35062c"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:343568180534:vpc/vpc-08d5a8cb9ff35062c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5dca0fff718cc6d",
            "default_route_table_id": "rtb-09d29620f7cdc7461",
            "default_security_group_id": "sg-0754c7e326cbf3a0c",
            "dhcp_options_id": "dopt-0118b12bcb0f5889b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d5a8cb9ff35062c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d29620f7cdc7461",
            "owner_id": "343568180534",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "main-Gal"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "main-Gal"
            }
          }
        }
      ]
    }
  ]
}